--- a/.github/workflows/update-manifest.yml
+++ b/.github/workflows/update-manifest.yml
@@ -3,7 +3,7 @@ name: Update Blog Manifest
 on:
   push:
     paths:
-      - 'blog-posts/**'
+      - 'blog-posts/**.md'
     branches:
       - main
 
@@ -13,20 +13,22 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
 
       - name: Update manifest
         run: node build-manifest.js
 
-      - name: Commit changes
+      - name: Commit and push if changed
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git add blog-posts/manifest.json
-          git commit -m "chore: update blog manifest" || true
-          git push || true
+          git diff --quiet blog-posts/manifest.json || {
+            git add blog-posts/manifest.json
+            git commit -m "chore: auto-update blog manifest"
+            git push
+          }
